--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serenity = { version = "0.11", features = ["gateway"] }
+serenity = { version = "0.11", features = ["client", "gateway", "model", "native_tls_backend"], default-features = false }
 tokio = { version = "1", features = ["full"] }
