--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 serenity = { version = "0.11", features = ["client", "gateway", "model", "native_tls_backend"], default-features = false }
+songbird = { version = "0.3", features = ["serenity-native"] }
 tokio = { version = "1", features = ["full"] }
