--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenvy = { version = "0.15" }
 serenity = { version = "0.11", features = ["client", "gateway", "model", "native_tls_backend"], default-features = false }
 songbird = { version = "0.3", features = ["serenity-native"] }
 tokio = { version = "1", features = ["full"] }
