Implement voice recognition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 dotenvy = { version = "0.15" }
 rand = { version = "0.8", features = ["std_rng"]}
 serenity = { version = "0.11", features = ["client", "gateway", "model", "native_tls_backend"], default-features = false }
+vosk = { version = "0.2" }
 songbird = { version = "0.3", features = ["serenity-native", "yt-dlp"] }
 tokio = { version = "1", features = ["full"] }
