--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serenity = { version = "0.11", features = ["client", "gateway", "model", "native
 vosk = { version = "0.2" }
 songbird = { version = "0.3", features = ["serenity-native", "yt-dlp"] }
 tokio = { version = "1", features = ["full"] }
+openai_api_rust = "0.1.8"
