--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 dotenvy = { version = "0.15" }
+# fon = { version = "0.6" }
 lazy_static = { version = "1.4" }
 openai_api_rust = "0.1"
 rand = { version = "0.8", features = ["std_rng"]}
